--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,12 @@
-h1{
-  font: size 10px;
-  text-align: center;
-  font-family:TASA Explorer;
-  color:white;
-
-}
-
-body {
+body{
   width: 600px;
   background-color:black ;
-  padding:
-
+  font-family:TASA Explorer;
 }
+
+.stare {
+  text-align:center;
+  font-size: 10px;
+  color:white;
+}
+
