--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
 body{
   width: 600px;
   background-color:black ;
-  font-family:TASA Explorer;
+  font-family: "Montserrat", sans-serif;
 }
+
+
+ 
+
 
 .stare {
   text-align:center;
